create and change models and htmls

--- a/djangoapp/blog/templates/blog/base.html
+++ b/djangoapp/blog/templates/blog/base.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    {% include "blog/partials/_head.html" %}
-  </head>
-  <body>
-    <h1>INDEX</h1>
-    {% include "blog/partials/_header.html" %}
+<html lang="pt-BR">
+<head>
+  {% include 'blog/partials/_head.html' %}
+</head>
+<body>
+  <div class="blog-wrapper">
+    {% if site_setup.show_header %}
+      {% include 'blog/partials/_header.html' %}
+    {% endif %}
 
     {% block content %}{% endblock content %}
+    
+    {% if site_setup.show_pagination %}
+      {% include 'blog/partials/_pagination.html' %}
+    {% endif %}
 
-    {% include "blog/partials/_pagination.html" %}
-
-    {% include "blog/partials/_footer.html" %}
-  </body>
+    {% if site_setup.show_footer %}
+      {% include 'blog/partials/_footer.html' %}
+    {% endif %}
+  </div>
+</body>
 </html>
