--- a/djangoapp/blog/templates/blog/partials/_header.html
+++ b/djangoapp/blog/templates/blog/partials/_header.html
@@ -1,1 +1,55 @@
-<h1>Header</h1>
+<header class="header section-wrapper">
+  <div class="section-content-wide">
+    <div class="section-gap">
+
+      <h1 class="blog-title center pb-base">
+        <a class="blog-link" href="/">{{ site_setup.title }}</a>
+      </h1>
+      
+      {% if site_setup.show_description %}
+        <p class="blog-description pb-base center">{{ site_setup.description }}</p>
+      {% endif %}
+
+      {% if site_setup.show_search %}
+        <div class="search pb-base center">
+          <form class="search-form" action="#" method="get">
+            <div class="search-content">
+              <label class="sr-only" id="search-label" for="search-input">Search</label>
+              <input
+                class="search-input"
+                type="search"
+                name="search"
+                id="search-input"
+                placeholder="Search"
+              >
+              <button class="search-btn" type="submit" aria-labelledby="search-label">
+                <i class="fa fa-search"></i>
+              </button>
+            </div>
+          </form>
+        </div>
+      {% endif %}
+
+      {% if site_setup.show_menu %}
+        <nav class="menu">
+          <ul class="menu-items">
+            {% for link in site_setup.menulink_set.all %}
+              <li class="menu-item">
+                {% if link.new_tab %}
+                  <a target="_blank" class="menu-link" href="{{ link.url_or_path }}">
+                    {{ link.text }}
+                  </a>
+              {% else %}
+                  <a class="menu-link" href="{{ link.url_or_path }}">
+                    {{ link.text }}
+                  </a>
+                {% endif %}
+              </li>
+            {% endfor %}
+          </ul>
+        </nav>
+      {% endif %}
+      
+    </div>
+  </div>
+</header>
