--- a/djangoapp/blog/templates/blog/pages/index.html
+++ b/djangoapp/blog/templates/blog/pages/index.html
@@ -1,2 +1,28 @@
-{% extends "blog/base.html" %} 
-{% block content %} {% endblock content %}
+{% extends 'blog/base.html' %}
+
+{% block content %}
+  <main class="main-content section-wrapper">
+    <div class="section-content-wide">
+      <div class="section-gap">
+
+        {% if posts %}
+          <div class="card-grid">
+            {% for post in posts %}
+              {% include 'blog/partials/_post-card.html' with i=forloop.counter0 %}
+            {% endfor %}
+          </div>
+        {% else %}
+          <div class="not-found center">
+            <h1>Nada encontrado 😔</h1>
+            <p>
+              Não encontrei nada nesse link, por favor, clique em outro 
+              link do nosso blog ou vá para a 
+              <a href="{% url 'blog:index' %}">Home</a>.
+            </p>
+          </div>
+        {% endif %}
+
+      </div>
+    </div>
+  </main>
+{% endblock content %}
