--- a/djangoapp/blog/templates/blog/partials/_footer.html
+++ b/djangoapp/blog/templates/blog/partials/_footer.html
@@ -1,1 +1,9 @@
-<h1>Footer</h1>
+<footer class="footer section-wrapper">
+  <div class="section-content-wide">
+    <div class="section-gap">
+      <div class="center">
+        © {% now "Y" %} {{ site_setup.title }} - Todos os direitos reservados.
+      </div>
+    </div>
+  </div>
+</footer>
