--- a/djangoapp/blog/templates/blog/pages/post.html
+++ b/djangoapp/blog/templates/blog/pages/post.html
@@ -1,102 +1,89 @@
-{% extends 'blog/base.html' %} 
-
-{% block additional_head %}
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.2/codemirror.min.css">
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/theme/dracula.min.css">
-
-<script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.2/codemirror.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.2/mode/python/python.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.2/mode/javascript/javascript.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.2/mode/htmlmixed/htmlmixed.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.2/mode/css/css.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.2/mode/xml/xml.min.js"></script>
-{% endblock additional_head %}
-
-{% block content %}
+{% extends 'blog/base.html' %} {% block content %}
 <main class="main-content single-post section-wrapper">
   <div class="single-post-content section-content-narrow">
     <div class="single-post-gap section-gap">
-
       {% if post.cover and post.cover_in_post_content %}
-        <div class="single-post-cover pb-base">
-          <img 
-            loading="lazy" 
-            src="{{ post.cover.url }}" 
-            alt="{{ post.title }}"
-          >
-        </div>
+      <div class="single-post-cover pb-base">
+        <img loading="lazy" src="{{ post.cover.url }}" alt="{{ post.title }}" />
+      </div>
       {% endif %}
 
-      <h2 class="single-post-title pb-base center">
-        {{ post.title }}
-      </h2>
+      <h2 class="single-post-title pb-base center">{{ post.title }}</h2>
 
       <div class="post-meta pb-base">
         <div class="post-meta-item">
-          <a 
-            class="post-meta-link" 
+          <a
+            class="post-meta-link"
             href="{% url 'blog:created_by' post.created_by.pk  %}"
           >
             <i class="fa-solid fa-user"></i>
             <span>
-              {% if post.created_by.first_name %}
-                {{ post.created_by.first_name }} 
-                {{ post.created_by.last_name }}
-              {% else %}
-                {{ post.created_by.username }}
-              {% endif %}
+              {% if post.created_by.first_name %} {{ post.created_by.first_name
+              }} {{ post.created_by.last_name }} {% else %} {{
+              post.created_by.username }} {% endif %}
             </span>
           </a>
         </div>
         <div class="post-meta-item">
           <span class="post-meta-link">
             <i class="fa-solid fa-calendar-days"></i>
-            <span>
-              {{ post.created_at | date:'d/m/Y \à\s H:i' }}
-            </span>
+            <span> 20/04/2023 </span>
           </span>
         </div>
 
         {% if post.category %}
-          <div class="post-meta-item">
-            <a 
-              class="post-meta-link" 
-              href="{% url 'blog:category' post.category.slug  %}"
-            >
-              <i class="fa-solid fa-tag"></i>
-              <span>
-                {{ post.category.name }}
-              </span>
-            </a>
-          </div>
+        <div class="post-meta-item">
+          <a
+            class="post-meta-link"
+            href="{% url 'blog:category' post.category.slug  %}"
+          >
+            <i class="fa-solid fa-tag"></i>
+            <span> {{ post.category.name }} </span>
+          </a>
+        </div>
         {% endif %}
-      
       </div>
 
       <p class="single-post-excerpt pb-base">
-        {{ post.excerpt | safe }}
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, vero
+        fugiat eum perferendis accusamus enim quos obcaecati. Voluptates a vel
+        obcaecati ipsa in dignissimos facere odio et, ab provident assumenda!
       </p>
 
       <div class="separator"></div>
 
       <div class="single-post-content">
-        {{ post.content | safe  }} 
-      
-        {% if post.tags.exists %}
-          <div class="post-tags">
-            <span>Tags: </span>
+        {% include 'blog/partials/_temp.html' %}
 
-            {% for tag in post.tags.all %}
-              <a class="post-tag-link" href="{% url 'blog:tag' tag.slug %}">
-                <i class="fa-solid fa-link"></i>
-                <span>{{ tag.name }}</span>
-              </a>
-            {% endfor %}
-          </div>
-        {% endif %}
-        
+        <div class="post-tags">
+          <span>Tags: </span>
+
+          <a class="post-tag-link" href="#">
+            <i class="fa-solid fa-link"></i>
+            <span>Testando</span>
+          </a>
+
+          <a class="post-tag-link" href="#">
+            <i class="fa-solid fa-link"></i>
+            <span>Atenção</span>
+          </a>
+
+          <a class="post-tag-link" href="#">
+            <i class="fa-solid fa-link"></i>
+            <span>Obrigado</span>
+          </a>
+
+          <a class="post-tag-link" href="#">
+            <i class="fa-solid fa-link"></i>
+            <span>Educação</span>
+          </a>
+
+          <a class="post-tag-link" href="#">
+            <i class="fa-solid fa-link"></i>
+            <span>Python</span>
+          </a>
+        </div>
       </div>
-    
     </div>
   </div>
 </main>
