change models, urls, views, settins, etc

--- a/djangoapp/blog/templates/blog/pages/index.html
+++ b/djangoapp/blog/templates/blog/pages/index.html
@@ -5,10 +5,10 @@
     <div class="section-content-wide">
       <div class="section-gap">
 
-        {% if posts %}
+        {% if page_obj %}
           <div class="card-grid">
-            {% for post in posts %}
-              {% include 'blog/partials/_post-card.html' with i=forloop.counter0 %}
+            {% for post in page_obj %}
+              {% include "blog/partials/_post-card.html" with i=forloop.counter0 %}
             {% endfor %}
           </div>
         {% else %}
@@ -21,7 +21,7 @@
             </p>
           </div>
         {% endif %}
-
+        
       </div>
     </div>
   </main>
