--- a/djangoapp/blog/templates/blog/partials/_head.html
+++ b/djangoapp/blog/templates/blog/partials/_head.html
@@ -14,7 +14,7 @@
 />
 {% endif %}
 
-<title>{{ site_setup.title }}</title>
+<title>{{ page_title }}{{ site_setup.title }}</title>
 
 <link
   rel="stylesheet"
